; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_tar.c_gnu_clear_sparse_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_tar.c_gnu_clear_sparse_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tar = type { i32*, %struct.sparse_block* }
%struct.sparse_block = type { %struct.sparse_block* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tar*)* @gnu_clear_sparse_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gnu_clear_sparse_list(%struct.tar* %0) #0 {
  %2 = alloca %struct.tar*, align 8
  %3 = alloca %struct.sparse_block*, align 8
  store %struct.tar* %0, %struct.tar** %2, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.tar*, %struct.tar** %2, align 8
  %6 = getelementptr inbounds %struct.tar, %struct.tar* %5, i32 0, i32 1
  %7 = load %struct.sparse_block*, %struct.sparse_block** %6, align 8
  %8 = icmp ne %struct.sparse_block* %7, null
  br i1 %8, label %9, label %20

9:                                                ; preds = %4
  %10 = load %struct.tar*, %struct.tar** %2, align 8
  %11 = getelementptr inbounds %struct.tar, %struct.tar* %10, i32 0, i32 1
  %12 = load %struct.sparse_block*, %struct.sparse_block** %11, align 8
  store %struct.sparse_block* %12, %struct.sparse_block** %3, align 8
  %13 = load %struct.sparse_block*, %struct.sparse_block** %3, align 8
  %14 = getelementptr inbounds %struct.sparse_block, %struct.sparse_block* %13, i32 0, i32 0
  %15 = load %struct.sparse_block*, %struct.sparse_block** %14, align 8
  %16 = load %struct.tar*, %struct.tar** %2, align 8
  %17 = getelementptr inbounds %struct.tar, %struct.tar* %16, i32 0, i32 1
  store %struct.sparse_block* %15, %struct.sparse_block** %17, align 8
  %18 = load %struct.sparse_block*, %struct.sparse_block** %3, align 8
  %19 = call i32 @free(%struct.sparse_block* %18)
  br label %4

20:                                               ; preds = %4
  %21 = load %struct.tar*, %struct.tar** %2, align 8
  %22 = getelementptr inbounds %struct.tar, %struct.tar* %21, i32 0, i32 0
  store i32* null, i32** %22, align 8
  ret void
}

declare dso_local i32 @free(%struct.sparse_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
